[gd_scene load_steps=5 format=2]

[ext_resource path="res://Nodes/Character/Tower/TowerCharacterController.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Character/BaseCharacterController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/CharacterCollectionArea.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 48.0

[node name="TowerCharacterController" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="PhysicCharacterBody" parent="." index="0"]
modulate = Color( 1, 0, 0, 1 )

[node name="CharacterCollectionArea" parent="PhysicCharacterBody" index="1" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicCharacterBody/CharacterCollectionArea" index="0"]
shape = SubResource( 1 )

[node name="PhysicBodyShape" type="CollisionShape2D" parent="PhysicCharacterBody" index="2"]
